--- a/resources/canvasStyle.css
+++ b/resources/canvasStyle.css
@@ -14,6 +14,7 @@ body {
   margin-top: 10px;
   padding: 0px;
   float: left;
+  overflow: hidden;
 }
 
 .square {
@@ -90,7 +91,8 @@ body {
   left: 10px;
   width: 55px;
   height: 55px;
-  border: 5px #fff groove;
+  border: 2px #fff solid;
+  outline: 3px #aaa solid;
   background-color: rgb(0,0,0);
   z-index: 2;
 }
@@ -101,7 +103,8 @@ body {
   left: 35px;
   width: 55px;
   height: 55px;
-  border: 5px #fff groove;
+  border: 2px #fff solid;
+  outline: 3px #aaa solid;
   background-color: rgb(0,0,255);
   z-index: 1;
 }
