--- a/webapp.css
+++ b/webapp.css
@@ -54,26 +54,80 @@ p {
 	font-family: 'Fjalla One', sans-serif;
 }
 
-.image_overlay {
+/*.image_overlay {
 	position: relative;
 	width: 100%;
+}*/
+
+/*::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}*/
+
+::-webkit-scrollbar {
+    width: 14px;
+    height: 18px;
 }
 
-h3 span {
-	font-family: 'Fjalla One', sans-serif;
+::-webkit-scrollbar-thumb {
+    height: 6px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    -webkit-border-radius: 7px;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
+}
+
+.delete_button_overlay {
+	z-index: 100;
 	position: absolute;
-	top: 90%;
-	left: 5%;
-	width: 90%;
-	text-align: center;
-	color: white; 
-	letter-spacing: -1px;  
-	background: rgba(0, 0, 0, 0.6);
+	text-align: right;
+	display: block;
+	left: 84%;
+	color: white;
+	font-size: 120%;
+	top: 5px;
+}
+
+.duplicate_button_overlay {
+	z-index: 100;
+	position: absolute;
+	text-align: right;
+	display: block;
+	left: 84%;
+	color: white;
+	top: 30px;
+	font-size: 120%
+}
+
+.drawing_label {
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
 	padding: 5%;
+	background: rgba(0, 0, 0, 0.6);
+	text-align: center;
+	display: block;
+	letter-spacing: 1px;
+	font-size: 140%;
 }
 
 .thumbnail_grid {
   	max-height: 600px;
   	overflow-y: auto;
   	overflow-x: hidden;
+}
+
+button {
+	background: rgba(0, 0, 0, 0.6);
+	border: 1px solid #FFFFFF;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
