Can rename, set properties, and switch between layers. Next step: layer icons, deletion, and reordering.

--- a/resources/canvasStyle.css
+++ b/resources/canvasStyle.css
@@ -323,11 +323,10 @@ body {
 
 #layerList span {
   text-align: center;
-  width: 89px;
-  margin-left: 5px;
-  margin-right: 5px;
+  width: 62px;
   display: block;
   line-height: 58px;
+  overflow: hidden;
 }
 
 #layerList span:hover {
