--- a/resources/canvasStyle.css
+++ b/resources/canvasStyle.css
@@ -373,3 +373,10 @@ body {
   border-bottom: 4px solid #ccc;
 }
 
+#toolOptions p {
+  font-family: "Calibri", sans-serif;
+  font-size: 24px;
+  text-align: center;
+  margin-top: 10px;
+  color: #aaa;
+}
